QC-107 - Moved modules into folders in DCT and eSourcePlatform project. Renamed some existing module to be in line with naming convention. Removed some unused modules

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -2531,28 +2531,28 @@
       <DependentUpon>Verify_Secure_URL.rxrec</DependentUpon>
       <UserCode>true</UserCode>
     </Compile>
-    <Compile Include="General\Verify_Version_Client.cs">
+    <Compile Include="General\Verify_Client_Version.cs">
       <BoundTo>179b7486-a612-4e51-a5d1-6ab15b29afd5</BoundTo>
-      <DependentUpon>Verify_Version_Client.rxrec</DependentUpon>
+      <DependentUpon>Verify_Client_Version.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>6709eb24-fd06-47ab-aeef-e7fbf2c289a7</id>
     </Compile>
-    <Compile Include="General\Verify_Version_Client.UserCode.cs">
+    <Compile Include="General\Verify_Client_Version.UserCode.cs">
       <BoundTo>179b7486-a612-4e51-a5d1-6ab15b29afd5</BoundTo>
-      <DependentUpon>Verify_Version_Client.rxrec</DependentUpon>
+      <DependentUpon>Verify_Client_Version.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>7ff2a281-7929-48d8-8776-6958263d82f6</id>
     </Compile>
-    <Compile Include="General\Verify_Version_Deployed.cs">
+    <Compile Include="General\Verify_API_Version.cs">
       <id>88f21865-db17-4fbc-9bf3-5620b6b22e94</id>
       <BoundTo>19edc20e-5832-4454-a1b4-82cdc3cbceca</BoundTo>
-      <DependentUpon>Verify_Version_Deployed.rxrec</DependentUpon>
+      <DependentUpon>Verify_API_Version.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
     </Compile>
-    <Compile Include="General\Verify_Version_Deployed.UserCode.cs">
+    <Compile Include="General\Verify_API_Version.UserCode.cs">
       <id>ff139442-3aa2-48fa-ae52-5c5ac40327bb</id>
       <BoundTo>19edc20e-5832-4454-a1b4-82cdc3cbceca</BoundTo>
-      <DependentUpon>Verify_Version_Deployed.rxrec</DependentUpon>
+      <DependentUpon>Verify_API_Version.rxrec</DependentUpon>
       <UserCode>true</UserCode>
     </Compile>
     <Compile Include="General\Wait_for_Upload.cs">
@@ -5069,12 +5069,12 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>8720e4ed-cabc-4f47-8984-b71fc93cb4df</recordtableid>
     </None>
-    <None Include="General\Verify_Version_Client.rxrec">
+    <None Include="General\Verify_Client_Version.rxrec">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>179b7486-a612-4e51-a5d1-6ab15b29afd5</id>
       <recordtableid>bbd7de50-f153-4542-b412-b02ff4df214c</recordtableid>
     </None>
-    <None Include="General\Verify_Version_Deployed.rxrec">
+    <None Include="General\Verify_API_Version.rxrec">
       <id>19edc20e-5832-4454-a1b4-82cdc3cbceca</id>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>c718511d-4281-405c-9160-251f311d2703</recordtableid>
