--- a/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
+++ b/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
@@ -151,18 +151,6 @@
     <Compile Include="AssemblyInfo.cs">
       <id>ddd3f088-63bc-40ca-b06b-ba2e7448f40a</id>
     </Compile>
-    <Compile Include="dbVesrion.cs">
-      <BoundTo>18a81de2-f9cb-45d0-a3ef-481ace8d9c8c</BoundTo>
-      <DependentUpon>dbVesrion.rxrec</DependentUpon>
-      <RecorderCode>true</RecorderCode>
-      <id>2ddc7d78-4814-4787-9bf8-0ecbefef8ad5</id>
-    </Compile>
-    <Compile Include="dbVesrion.UserCode.cs">
-      <BoundTo>18a81de2-f9cb-45d0-a3ef-481ace8d9c8c</BoundTo>
-      <DependentUpon>dbVesrion.rxrec</DependentUpon>
-      <UserCode>true</UserCode>
-      <id>9f6b8ae8-d236-456d-b84b-ed0a6c39c0c3</id>
-    </Compile>
     <Compile Include="DB_AssessmentValidation.cs">
       <BoundTo>d1123a8a-78b7-412a-8997-cf90055a462c</BoundTo>
       <DependentUpon>DB_AssessmentValidation.rxrec</DependentUpon>
@@ -174,42 +162,6 @@
       <DependentUpon>DB_AssessmentValidation.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>0077bb98-dfb1-471a-955a-5712916e9a55</id>
-    </Compile>
-    <Compile Include="DCDBVersion.cs">
-      <BoundTo>657edab0-3b6f-4c07-a2ea-2583180e20ff</BoundTo>
-      <DependentUpon>DCDBVersion.rxrec</DependentUpon>
-      <RecorderCode>true</RecorderCode>
-      <id>d838afa2-8b50-41c4-b9e7-8dcc1268426b</id>
-    </Compile>
-    <Compile Include="DCDBVersion.UserCode.cs">
-      <BoundTo>657edab0-3b6f-4c07-a2ea-2583180e20ff</BoundTo>
-      <DependentUpon>DCDBVersion.rxrec</DependentUpon>
-      <UserCode>true</UserCode>
-      <id>94768ad3-dba3-41e4-a6be-e7b17f3a5a5b</id>
-    </Compile>
-    <Compile Include="DCTHubversion.cs">
-      <BoundTo>ba1170a1-50c9-4689-a51f-b7411a36dd32</BoundTo>
-      <DependentUpon>DCTHubversion.rxrec</DependentUpon>
-      <RecorderCode>true</RecorderCode>
-      <id>7add2387-eab8-4c54-a7d6-f2464888ab0c</id>
-    </Compile>
-    <Compile Include="DCTHubversion.UserCode.cs">
-      <BoundTo>ba1170a1-50c9-4689-a51f-b7411a36dd32</BoundTo>
-      <DependentUpon>DCTHubversion.rxrec</DependentUpon>
-      <UserCode>true</UserCode>
-      <id>78d6a8fd-3136-4ff7-a150-5c5e4185e4fd</id>
-    </Compile>
-    <Compile Include="DCTVHUBV.cs">
-      <BoundTo>cd241174-f913-4865-97ed-4b900ae2fa28</BoundTo>
-      <DependentUpon>DCTVHUBV.rxrec</DependentUpon>
-      <RecorderCode>true</RecorderCode>
-      <id>cedf3d92-cb2b-4bc8-ab97-46d5e9ea3e77</id>
-    </Compile>
-    <Compile Include="DCTVHUBV.UserCode.cs">
-      <BoundTo>cd241174-f913-4865-97ed-4b900ae2fa28</BoundTo>
-      <DependentUpon>DCTVHUBV.rxrec</DependentUpon>
-      <UserCode>true</UserCode>
-      <id>453994b3-c274-42d4-8615-874fbcac102d</id>
     </Compile>
     <Compile Include="eSourcePlatformRepository.cs">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
@@ -229,30 +181,6 @@
       <UserCode>true</UserCode>
       <id>84876868-65fb-487e-9b9a-1724c0c44c9d</id>
     </Compile>
-    <Compile Include="NetFrameworkValidation.cs">
-      <BoundTo>8dd63b52-bece-4894-be8f-8eae37f3d3f6</BoundTo>
-      <DependentUpon>NetFrameworkValidation.rxrec</DependentUpon>
-      <RecorderCode>true</RecorderCode>
-      <id>f05300b7-dee0-4df4-a295-0880e070fdd9</id>
-    </Compile>
-    <Compile Include="NetFrameworkValidation.UserCode.cs">
-      <BoundTo>8dd63b52-bece-4894-be8f-8eae37f3d3f6</BoundTo>
-      <DependentUpon>NetFrameworkValidation.rxrec</DependentUpon>
-      <UserCode>true</UserCode>
-      <id>6a7f6a5e-2c51-4d1d-a5c1-354673fa30f9</id>
-    </Compile>
-    <Compile Include="Net_Framework.cs">
-      <BoundTo>bf2ba199-2907-41f9-80e7-1b167ce9e64f</BoundTo>
-      <DependentUpon>Net_Framework.rxrec</DependentUpon>
-      <RecorderCode>true</RecorderCode>
-      <id>a2b25655-fe58-4733-b432-0feb851283d5</id>
-    </Compile>
-    <Compile Include="Net_Framework.UserCode.cs">
-      <BoundTo>bf2ba199-2907-41f9-80e7-1b167ce9e64f</BoundTo>
-      <DependentUpon>Net_Framework.rxrec</DependentUpon>
-      <UserCode>true</UserCode>
-      <id>c6a7b877-92ca-4683-80b5-c08c0e31b823</id>
-    </Compile>
     <Compile Include="OpenAzLocation.cs">
       <BoundTo>553a8476-098f-4f72-83bb-8ed52f43b7ea</BoundTo>
       <DependentUpon>OpenAzLocation.rxrec</DependentUpon>
@@ -265,44 +193,92 @@
       <UserCode>true</UserCode>
       <id>f2ed6075-1c9d-4e2e-aaa2-1cfe17932955</id>
     </Compile>
-    <Compile Include="PowerBILogin.cs">
-      <BoundTo>d1fa21c9-33f4-4eba-88fb-2fa2272444e2</BoundTo>
-      <DependentUpon>PowerBILogin.rxrec</DependentUpon>
-      <RecorderCode>true</RecorderCode>
-      <id>45b0e2b6-a4e1-45a5-85b0-779481ca9e07</id>
-    </Compile>
-    <Compile Include="PowerBILogin.UserCode.cs">
-      <BoundTo>d1fa21c9-33f4-4eba-88fb-2fa2272444e2</BoundTo>
-      <DependentUpon>PowerBILogin.rxrec</DependentUpon>
-      <UserCode>true</UserCode>
-      <id>ee2dab40-eaed-47b8-805a-da52d7d332df</id>
-    </Compile>
-    <Compile Include="PowerBIPassword.cs">
-      <BoundTo>4abab1b4-e1e0-4a59-ab5d-0a95388a40b1</BoundTo>
-      <DependentUpon>PowerBIPassword.rxrec</DependentUpon>
-      <RecorderCode>true</RecorderCode>
-      <id>8400a1d8-504e-43ef-821e-c0e58a1d1a77</id>
-    </Compile>
-    <Compile Include="PowerBIPassword.UserCode.cs">
-      <BoundTo>4abab1b4-e1e0-4a59-ab5d-0a95388a40b1</BoundTo>
-      <DependentUpon>PowerBIPassword.rxrec</DependentUpon>
-      <UserCode>true</UserCode>
-      <id>3f2e2f64-4e4e-43f0-a4fc-30e276820f86</id>
-    </Compile>
     <Compile Include="Program.cs">
       <id>a96bd5ee-0e36-4cbf-8c8c-70a3e4390d99</id>
     </Compile>
-    <Compile Include="ReportingDBVersion.cs">
-      <BoundTo>45cd5fce-5571-42ff-b031-ef5c544b062a</BoundTo>
-      <DependentUpon>ReportingDBVersion.rxrec</DependentUpon>
+    <Compile Include="VersionChecks\CSP_DBVersion.cs">
+      <DependentUpon>CSP_DBVersion.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>2ddc7d78-4814-4787-9bf8-0ecbefef8ad5</id>
+      <BoundTo>18a81de2-f9cb-45d0-a3ef-481ace8d9c8c</BoundTo>
+    </Compile>
+    <Compile Include="VersionChecks\CSP_DBVersion.UserCode.cs">
+      <DependentUpon>CSP_DBVersion.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>9f6b8ae8-d236-456d-b84b-ed0a6c39c0c3</id>
+      <BoundTo>18a81de2-f9cb-45d0-a3ef-481ace8d9c8c</BoundTo>
+    </Compile>
+    <Compile Include="VersionChecks\DCTHubversion.cs">
+      <DependentUpon>DCTHubversion.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>7add2387-eab8-4c54-a7d6-f2464888ab0c</id>
+      <BoundTo>ba1170a1-50c9-4689-a51f-b7411a36dd32</BoundTo>
+    </Compile>
+    <Compile Include="VersionChecks\DCTHubversion.UserCode.cs">
+      <DependentUpon>DCTHubversion.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>78d6a8fd-3136-4ff7-a150-5c5e4185e4fd</id>
+      <BoundTo>ba1170a1-50c9-4689-a51f-b7411a36dd32</BoundTo>
+    </Compile>
+    <Compile Include="VersionChecks\DCT_HUB_Version.cs">
+      <DependentUpon>DCT_HUB_Version.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>cedf3d92-cb2b-4bc8-ab97-46d5e9ea3e77</id>
+      <BoundTo>cd241174-f913-4865-97ed-4b900ae2fa28</BoundTo>
+    </Compile>
+    <Compile Include="VersionChecks\DCT_HUB_Version.UserCode.cs">
+      <DependentUpon>DCT_HUB_Version.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>453994b3-c274-42d4-8615-874fbcac102d</id>
+      <BoundTo>cd241174-f913-4865-97ed-4b900ae2fa28</BoundTo>
+    </Compile>
+    <Compile Include="VersionChecks\DCT_DBVersion.cs">
+      <DependentUpon>DCT_DBVersion.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>d838afa2-8b50-41c4-b9e7-8dcc1268426b</id>
+      <BoundTo>657edab0-3b6f-4c07-a2ea-2583180e20ff</BoundTo>
+    </Compile>
+    <Compile Include="VersionChecks\DCT_DBVersion.UserCode.cs">
+      <DependentUpon>DCT_DBVersion.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>94768ad3-dba3-41e4-a6be-e7b17f3a5a5b</id>
+      <BoundTo>657edab0-3b6f-4c07-a2ea-2583180e20ff</BoundTo>
+    </Compile>
+    <Compile Include="VersionChecks\Get_NetFramework_Version.cs">
+      <DependentUpon>Get_NetFramework_Version.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>a2b25655-fe58-4733-b432-0feb851283d5</id>
+      <BoundTo>bf2ba199-2907-41f9-80e7-1b167ce9e64f</BoundTo>
+    </Compile>
+    <Compile Include="VersionChecks\Get_NetFramework_Version.UserCode.cs">
+      <DependentUpon>Get_NetFramework_Version.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>c6a7b877-92ca-4683-80b5-c08c0e31b823</id>
+      <BoundTo>bf2ba199-2907-41f9-80e7-1b167ce9e64f</BoundTo>
+    </Compile>
+    <Compile Include="VersionChecks\NetFrameworkValidation.cs">
+      <DependentUpon>NetFrameworkValidation.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>f05300b7-dee0-4df4-a295-0880e070fdd9</id>
+      <BoundTo>8dd63b52-bece-4894-be8f-8eae37f3d3f6</BoundTo>
+    </Compile>
+    <Compile Include="VersionChecks\NetFrameworkValidation.UserCode.cs">
+      <DependentUpon>NetFrameworkValidation.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>6a7f6a5e-2c51-4d1d-a5c1-354673fa30f9</id>
+      <BoundTo>8dd63b52-bece-4894-be8f-8eae37f3d3f6</BoundTo>
+    </Compile>
+    <Compile Include="VersionChecks\Reporting_DBVersion.cs">
+      <DependentUpon>Reporting_DBVersion.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>85c44e5c-56f3-41de-bd5a-de464078d047</id>
-    </Compile>
-    <Compile Include="ReportingDBVersion.UserCode.cs">
       <BoundTo>45cd5fce-5571-42ff-b031-ef5c544b062a</BoundTo>
-      <DependentUpon>ReportingDBVersion.rxrec</DependentUpon>
+    </Compile>
+    <Compile Include="VersionChecks\Reporting_DBVersion.UserCode.cs">
+      <DependentUpon>Reporting_DBVersion.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>c2cc1912-a86e-4d9a-ae51-bfd08527d159</id>
+      <BoundTo>45cd5fce-5571-42ff-b031-ef5c544b062a</BoundTo>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -323,30 +299,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <id>aae3da34-4981-4765-ae6f-060bf0c2fb1c</id>
     </Content>
-    <None Include="dbVesrion.rxrec">
-      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
-      <id>18a81de2-f9cb-45d0-a3ef-481ace8d9c8c</id>
-      <recordtableid>5440ad95-2787-406e-bfd8-a4a996120cd3</recordtableid>
-    </None>
     <None Include="DB_AssessmentValidation.rxrec">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
       <id>d1123a8a-78b7-412a-8997-cf90055a462c</id>
       <recordtableid>74edc47d-2b4b-418c-8ffc-996ba7474b59</recordtableid>
-    </None>
-    <None Include="DCDBVersion.rxrec">
-      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
-      <id>657edab0-3b6f-4c07-a2ea-2583180e20ff</id>
-      <recordtableid>e7e659e1-4c5a-43bc-9a7e-4bf52cb9cc4a</recordtableid>
-    </None>
-    <None Include="DCTHubversion.rxrec">
-      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
-      <id>ba1170a1-50c9-4689-a51f-b7411a36dd32</id>
-      <recordtableid>01b80522-2f5c-42ec-aacb-e89a1e91e2f7</recordtableid>
-    </None>
-    <None Include="DCTVHUBV.rxrec">
-      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
-      <id>cd241174-f913-4865-97ed-4b900ae2fa28</id>
-      <recordtableid>5b5d55fe-e7ec-45a2-a13a-ac13838f4b94</recordtableid>
     </None>
     <None Include="eSourcePlatformRepository.rximg">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
@@ -364,30 +320,10 @@
       <id>cadd37ef-5f50-4d2d-b93c-94ec28c9de4b</id>
       <recordtableid>977dffd0-3492-4a9e-b246-5e9ab54ea207</recordtableid>
     </None>
-    <None Include="NetFrameworkValidation.rxrec">
-      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
-      <id>8dd63b52-bece-4894-be8f-8eae37f3d3f6</id>
-      <recordtableid>fb326cbf-1e96-4635-a5ac-840af6cdb390</recordtableid>
-    </None>
-    <None Include="Net_Framework.rxrec">
-      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
-      <id>bf2ba199-2907-41f9-80e7-1b167ce9e64f</id>
-      <recordtableid>c63e787d-f0f7-4502-bc2b-55eac038f926</recordtableid>
-    </None>
     <None Include="OpenAzLocation.rxrec">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
       <id>553a8476-098f-4f72-83bb-8ed52f43b7ea</id>
       <recordtableid>d82ce541-c07b-4458-8378-0fcaefdb1f51</recordtableid>
-    </None>
-    <None Include="PowerBILogin.rxrec">
-      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
-      <id>d1fa21c9-33f4-4eba-88fb-2fa2272444e2</id>
-      <recordtableid>310c9589-c4c0-430f-9acb-89c4d0733fb5</recordtableid>
-    </None>
-    <None Include="PowerBIPassword.rxrec">
-      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
-      <id>4abab1b4-e1e0-4a59-ab5d-0a95388a40b1</id>
-      <recordtableid>8b563c40-f41f-4c13-8a9d-bfa9017c9334</recordtableid>
     </None>
     <Content Include="RCCConnector.csv">
       <Link>RCCConnector.csv</Link>
@@ -403,7 +339,37 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <id>2e3dcbcb-36db-4b24-8cb5-7a2482bd9764</id>
     </Content>
-    <None Include="ReportingDBVersion.rxrec">
+    <None Include="VersionChecks\CSP_DBVersion.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>18a81de2-f9cb-45d0-a3ef-481ace8d9c8c</id>
+      <recordtableid>5440ad95-2787-406e-bfd8-a4a996120cd3</recordtableid>
+    </None>
+    <None Include="VersionChecks\DCTHubversion.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>ba1170a1-50c9-4689-a51f-b7411a36dd32</id>
+      <recordtableid>01b80522-2f5c-42ec-aacb-e89a1e91e2f7</recordtableid>
+    </None>
+    <None Include="VersionChecks\DCT_HUB_Version.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>cd241174-f913-4865-97ed-4b900ae2fa28</id>
+      <recordtableid>5b5d55fe-e7ec-45a2-a13a-ac13838f4b94</recordtableid>
+    </None>
+    <None Include="VersionChecks\DCT_DBVersion.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>657edab0-3b6f-4c07-a2ea-2583180e20ff</id>
+      <recordtableid>e7e659e1-4c5a-43bc-9a7e-4bf52cb9cc4a</recordtableid>
+    </None>
+    <None Include="VersionChecks\Get_NetFramework_Version.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>bf2ba199-2907-41f9-80e7-1b167ce9e64f</id>
+      <recordtableid>c63e787d-f0f7-4502-bc2b-55eac038f926</recordtableid>
+    </None>
+    <None Include="VersionChecks\NetFrameworkValidation.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>8dd63b52-bece-4894-be8f-8eae37f3d3f6</id>
+      <recordtableid>fb326cbf-1e96-4635-a5ac-840af6cdb390</recordtableid>
+    </None>
+    <None Include="VersionChecks\Reporting_DBVersion.rxrec">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
       <id>45cd5fce-5571-42ff-b031-ef5c544b062a</id>
       <recordtableid>8964b727-80a6-4a41-8a16-a9387ba2b555</recordtableid>
@@ -436,6 +402,11 @@
       <Project>{BFD38B34-84CD-46FD-B2C5-C5494C75163F}</Project>
       <Name>ReportingLayer</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="VersionChecks">
+      <id>4ac85a45-7d83-44cc-bd57-2830aa68a7ba</id>
+    </Folder>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets">
   </Import>
