QC-92 - Added Scenario for TimerPedIDN to the processor

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -4913,6 +4913,10 @@
       <id>d6c56792-3967-4e2e-8942-69c32974d909</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\TimerPedIDN.csv">
+      <id>cacd89b6-e76b-4fff-a316-f251e58b0a2c</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\TimingCBB.csv">
       <id>716ff7d6-5c5d-490c-b18b-92af8401059d</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -5555,6 +5559,10 @@
     </None>
     <None Include="rawData\TimerIDNPF.txt">
       <id>2cfe1eba-129f-41fc-a1d3-4a5a26f77646</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerPedIDN.txt">
+      <id>5e076224-ec41-477d-886f-83287bf889c9</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\TimingCBB.txt">
