QC-92 - Added final TimerPedIDN Scenarios. Updated engine to pull new outcome (RawRTDifference) into data table for comparison

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -4917,6 +4917,18 @@
       <id>cacd89b6-e76b-4fff-a316-f251e58b0a2c</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\TimerPedIDNFF.csv">
+      <id>fbbb2f78-0e11-417f-8d6d-eee5ae0d8b6d</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerPedIDNPE.csv">
+      <id>ca234e99-574a-4e65-9f55-79966da6f6b6</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerPedIDNPF.csv">
+      <id>11d31a82-d516-46b8-a112-617cf8480cb5</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\TimingCBB.csv">
       <id>716ff7d6-5c5d-490c-b18b-92af8401059d</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -5563,6 +5575,18 @@
     </None>
     <None Include="rawData\TimerPedIDN.txt">
       <id>5e076224-ec41-477d-886f-83287bf889c9</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerPedIDNFF.txt">
+      <id>0a7a33fe-5971-4444-a81e-999e7107b17c</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerPedIDNPE.txt">
+      <id>54cc4f46-6f80-4546-8cdf-2ca42988b10b</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerPedIDNPF.txt">
+      <id>9cad9091-e2fe-41d3-939e-63dabec746cc</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\TimingCBB.txt">
