QC-94 - Added Timer OneBack scenarios to Processor project

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -4941,6 +4941,22 @@
       <id>d6c56792-3967-4e2e-8942-69c32974d909</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\TimerOneB.csv">
+      <id>e397aaaa-9c2b-4988-b989-909a85033b7d</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerOneBFF.csv">
+      <id>52102060-4ee3-40fa-a858-3afd77994fd1</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerOneBPE.csv">
+      <id>5808794e-6d5b-430d-aa43-c4f9e8b57f91</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerOneBPF.csv">
+      <id>fa3ab940-a951-4615-8c51-1bcdc2d1f29b</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\TimerPedDET.csv">
       <id>48c93796-0143-4829-a897-83028623fd72</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -5655,6 +5671,22 @@
     </None>
     <None Include="rawData\TimerIDNPF.txt">
       <id>2cfe1eba-129f-41fc-a1d3-4a5a26f77646</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerOneB.txt">
+      <id>5c170b77-4d12-4159-af54-dfe4caf3ad44</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerOneBFF.txt">
+      <id>e9b5831c-174f-4d1d-8909-5c59bd020ad0</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerOneBPE.txt">
+      <id>b4bab744-dddf-433c-a196-e38103e21cac</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerOneBPF.txt">
+      <id>8039b10a-0071-40e6-926e-fc23eb64bd52</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\TimerPedDet.txt">
