QC-94 - Added Timer OneBack Pediatric scenarios to processor project

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -5001,6 +5001,22 @@
       <id>11d31a82-d516-46b8-a112-617cf8480cb5</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\TimerPedOneB.csv">
+      <id>98d961ac-abb6-4440-9b38-a13442f655b7</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerPedOneBFF.csv">
+      <id>8421e51e-e63f-4ec6-8017-5f952a263e03</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerPedOneBPE.csv">
+      <id>e5383d92-bc98-4fc4-b193-31315a365eac</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerPedOneBPF.csv">
+      <id>0fddb2c1-9603-499d-a392-6eaa663add9e</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\TimingCBB.csv">
       <id>716ff7d6-5c5d-490c-b18b-92af8401059d</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -5731,6 +5747,22 @@
     </None>
     <None Include="rawData\TimerPedIDNPF.txt">
       <id>9cad9091-e2fe-41d3-939e-63dabec746cc</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerPedOneB.txt">
+      <id>0ba38864-f938-4778-8f95-46e6efdbc222</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerPedOneBFF.txt">
+      <id>9d179b86-3835-4601-8a8e-8c6d2c2e18eb</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerPedOneBPE.txt">
+      <id>112b4fab-82f1-48d8-9ba0-b8ec3cd51925</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerPedOneBPF.txt">
+      <id>284f0d66-f021-428c-931a-31d0b2cd55f3</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\TimingCBB.txt">
