QC-109 - Added Timer TwoBack scenarios to the Processor project

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -5017,6 +5017,38 @@
       <id>0fddb2c1-9603-499d-a392-6eaa663add9e</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\TimerPedTwoB.csv">
+      <id>a6eaa059-4d01-4817-80f1-6fce9614499e</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerPedTwoBFF.csv">
+      <id>93f9dc3c-c37e-4486-8c08-3e1e22c74c81</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerPedTwoBPE.csv">
+      <id>81a3b341-dafa-4411-a714-887018211fd7</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerPedTwoBPF.csv">
+      <id>3012e655-e99d-44e9-8ba8-301df0a187b2</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerTwoB.csv">
+      <id>13a57d4e-1d62-49ae-8a49-41131c44d3b5</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerTwoBFF.csv">
+      <id>03f3af56-ef73-445b-b5d2-089964c4abf8</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerTwoBPE.csv">
+      <id>2f914116-75dc-4c68-90e2-162b6fcf354f</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\TimerTwoBPF.csv">
+      <id>8ed62e08-2bd2-403f-b7ab-b3a1dcd6d68a</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\TimingCBB.csv">
       <id>716ff7d6-5c5d-490c-b18b-92af8401059d</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -5763,6 +5795,38 @@
     </None>
     <None Include="rawData\TimerPedOneBPF.txt">
       <id>284f0d66-f021-428c-931a-31d0b2cd55f3</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerPedTwoB.txt">
+      <id>ff927952-a85a-4b07-af5e-fc7fe6c31651</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerPedTwoBFF.txt">
+      <id>3bfafe6c-de41-4db4-8ec8-2a7c67beb8ed</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerPedTwoBPE.txt">
+      <id>1087187a-3e3d-4d51-9157-85c5f4cbc0fc</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerPedTwoBPF.txt">
+      <id>859cab1b-04ce-4973-b05a-51e633dbf0cf</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerTwoB.txt">
+      <id>4cb417ce-2601-42df-97c1-d59fa87f88e6</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerTwoBFF.txt">
+      <id>6d017c80-7e07-4136-baf4-10825b79a624</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerTwoBPE.txt">
+      <id>b5558b73-da2d-4e33-be9a-1fc03a489aff</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerTwoBPF.txt">
+      <id>c92520af-95c1-4c2d-aa8e-76df6f74566a</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\TimingCBB.txt">
