QC-91: Added battery creation to the CSP API call

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -1763,6 +1763,18 @@
       <DependentUpon>Select_Battery.rxrec</DependentUpon>
       <UserCode>true</UserCode>
     </Compile>
+    <Compile Include="BatteryCreation.cs">
+      <BoundTo>7d63cecf-18a1-4c46-956b-e2c488cc67a8</BoundTo>
+      <DependentUpon>BatteryCreation.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>acd0411b-e486-4576-9407-8a8609a27fd5</id>
+    </Compile>
+    <Compile Include="BatteryCreation.UserCode.cs">
+      <BoundTo>7d63cecf-18a1-4c46-956b-e2c488cc67a8</BoundTo>
+      <DependentUpon>BatteryCreation.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>8d7c166f-9be2-4ef3-ac92-7b2d6c89016c</id>
+    </Compile>
     <Compile Include="BatteryTemplatePage\Clear_BatteryTemplate_Field.cs">
       <id>56aa4cc6-772e-452d-8040-b8dd645484ff</id>
       <BoundTo>e1b8c8b4-a9af-4dd3-8020-b2b9a7dcc9f2</BoundTo>
@@ -4514,6 +4526,11 @@
       <id>f252b411-c83e-4ea8-abd0-c84c79a3cea0</id>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>ae83b4a9-4f47-44d6-a475-555fe73f8c3d</recordtableid>
+    </None>
+    <None Include="BatteryCreation.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>7d63cecf-18a1-4c46-956b-e2c488cc67a8</id>
+      <recordtableid>9c9fbb6a-7049-4ee6-8a05-326298e5321f</recordtableid>
     </None>
     <None Include="BatteryTemplatePage\Clear_BatteryTemplate_Field.rxrec">
       <id>e1b8c8b4-a9af-4dd3-8020-b2b9a7dcc9f2</id>
