QC-113: Added create study API,create setlocality API,create battery API,create workflow API,create VisitCode API,

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -509,6 +509,18 @@
       <DependentUpon>Validate_Required_Template.rxrec</DependentUpon>
       <UserCode>true</UserCode>
     </Compile>
+    <Compile Include="addinBlock.cs">
+      <BoundTo>80ea9ad0-531c-4c1f-b081-7f203c9e7f0b</BoundTo>
+      <DependentUpon>addinBlock.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>eed34d1a-f382-40a1-a6be-8a71c0d44cab</id>
+    </Compile>
+    <Compile Include="addinBlock.UserCode.cs">
+      <BoundTo>80ea9ad0-531c-4c1f-b081-7f203c9e7f0b</BoundTo>
+      <DependentUpon>addinBlock.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>e6bef9cf-88d8-4b7d-8658-1394f82c4612</id>
+    </Compile>
     <Compile Include="AddStudyPage\Click_ProjectName_Field.cs">
       <id>f6cc8127-f9fd-4d89-8f12-94957914021b</id>
       <BoundTo>2858baff-f416-4052-bd5c-9d95a687a9c3</BoundTo>
@@ -676,6 +688,18 @@
       <BoundTo>868f928b-3897-4184-b844-6ebc5c49585c</BoundTo>
       <DependentUpon>Validate_StudyEntry.rxrec</DependentUpon>
       <UserCode>true</UserCode>
+    </Compile>
+    <Compile Include="addSuccessBlock.cs">
+      <BoundTo>2d7495ea-d4db-4945-b965-bb55dd261399</BoundTo>
+      <DependentUpon>addSuccessBlock.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>c0639358-5423-4177-97f4-30120f178dd5</id>
+    </Compile>
+    <Compile Include="addSuccessBlock.UserCode.cs">
+      <BoundTo>2d7495ea-d4db-4945-b965-bb55dd261399</BoundTo>
+      <DependentUpon>addSuccessBlock.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>ec490e11-2880-45b9-85bd-8ebfbabb35c7</id>
     </Compile>
     <Compile Include="AddVisitSchedulePage\Add_Visit_to_Schedule.cs">
       <DependentUpon>Add_Visit_to_Schedule.rxrec</DependentUpon>
@@ -2147,6 +2171,18 @@
       <DependentUpon>Validate_Required_BatteryTemplateStatus.rxrec</DependentUpon>
       <UserCode>true</UserCode>
     </Compile>
+    <Compile Include="CompletionSteps.cs">
+      <BoundTo>e358ecd7-fff5-4683-acd1-c237367c8687</BoundTo>
+      <DependentUpon>CompletionSteps.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>9cedfaf2-af9f-49fc-a92e-d399803946d0</id>
+    </Compile>
+    <Compile Include="CompletionSteps.UserCode.cs">
+      <BoundTo>e358ecd7-fff5-4683-acd1-c237367c8687</BoundTo>
+      <DependentUpon>CompletionSteps.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>fa6b518f-f45a-4bcf-ab03-dd82bd974a54</id>
+    </Compile>
     <Compile Include="CreateVisitschedule.cs">
       <BoundTo>5b9c3c72-3950-4d1c-9a7c-873a644cdc9b</BoundTo>
       <DependentUpon>CreateVisitschedule.rxrec</DependentUpon>
@@ -2602,6 +2638,18 @@
       <UserCode>true</UserCode>
       <id>81de7b5e-e55f-4acd-899a-d37e786814b4</id>
       <BoundTo>de77e08a-a1f1-46ac-8971-cdd7dbe62062</BoundTo>
+    </Compile>
+    <Compile Include="GetNextStateWoklowID.cs">
+      <BoundTo>295b7723-2ea3-45f9-a76a-736a772800e6</BoundTo>
+      <DependentUpon>GetNextStateWoklowID.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>a89b5e6c-41ee-460b-b48b-e7195496b23e</id>
+    </Compile>
+    <Compile Include="GetNextStateWoklowID.UserCode.cs">
+      <BoundTo>295b7723-2ea3-45f9-a76a-736a772800e6</BoundTo>
+      <DependentUpon>GetNextStateWoklowID.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>1354cc8c-7ebd-441e-8e95-15b5228ed32a</id>
     </Compile>
     <Compile Include="InternalAPIModules\AuthenticateAsInternalUser.cs">
       <DependentUpon>AuthenticateAsInternalUser.rxrec</DependentUpon>
@@ -3074,6 +3122,18 @@
     <Compile Include="Program.cs">
       <id>bcd8980c-aebe-43ad-ab29-ee0798e2d903</id>
     </Compile>
+    <Compile Include="publishWorkflow.cs">
+      <BoundTo>601dfacc-9379-4476-9b87-91f247360080</BoundTo>
+      <DependentUpon>publishWorkflow.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>d09b9c99-7fcd-410d-9b2c-b0aae025b209</id>
+    </Compile>
+    <Compile Include="publishWorkflow.UserCode.cs">
+      <BoundTo>601dfacc-9379-4476-9b87-91f247360080</BoundTo>
+      <DependentUpon>publishWorkflow.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>b40782e7-48c1-4016-b84d-ed2683f71f7d</id>
+    </Compile>
     <Compile Include="ReportsPage\Click_AcademicExtract_Link.cs">
       <BoundTo>c182812f-a250-478b-8089-57b36c9b0bc4</BoundTo>
       <DependentUpon>Click_AcademicExtract_Link.rxrec</DependentUpon>
@@ -3169,6 +3229,18 @@
       <BoundTo>480d9a60-ad4e-41ed-a1e4-d253bb05627c</BoundTo>
       <DependentUpon>View_Lastest_Report.rxrec</DependentUpon>
       <UserCode>true</UserCode>
+    </Compile>
+    <Compile Include="SetBatteryWorkflow.cs">
+      <BoundTo>ae923f1d-ea09-404d-84db-f0e7e049c920</BoundTo>
+      <DependentUpon>SetBatteryWorkflow.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>1d18e7a0-d2d7-40db-8cf4-85fd7b43e834</id>
+    </Compile>
+    <Compile Include="SetBatteryWorkflow.UserCode.cs">
+      <BoundTo>ae923f1d-ea09-404d-84db-f0e7e049c920</BoundTo>
+      <DependentUpon>SetBatteryWorkflow.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>883c101e-52a9-4a66-8a78-18af703808f9</id>
     </Compile>
     <Compile Include="StudiesPage\Click_Add_Study.cs">
       <id>b2a9c4de-daa4-49fa-be99-a68df1c8ba8f</id>
@@ -4016,6 +4088,11 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>9f9a48b0-34cf-448d-9fb4-303d184737cc</recordtableid>
     </None>
+    <None Include="addinBlock.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>80ea9ad0-531c-4c1f-b081-7f203c9e7f0b</id>
+      <recordtableid>96212289-c634-46c5-8cbb-9c4421cf821b</recordtableid>
+    </None>
     <None Include="AddStudyPage\Click_ProjectName_Field.rxrec">
       <id>2858baff-f416-4052-bd5c-9d95a687a9c3</id>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
@@ -4085,6 +4162,11 @@
       <id>868f928b-3897-4184-b844-6ebc5c49585c</id>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>dcd3c857-708a-4094-9656-57f93b949ee6</recordtableid>
+    </None>
+    <None Include="addSuccessBlock.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>2d7495ea-d4db-4945-b965-bb55dd261399</id>
+      <recordtableid>d8498245-af13-48dd-ba0c-4889cb6e2f8b</recordtableid>
     </None>
     <None Include="AddVisitSchedulePage\Add_Visit_to_Schedule.rxrec">
       <id>9d604c2b-386e-4407-a205-f604e80e4a78</id>
@@ -4699,6 +4781,11 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>080df293-98c0-462b-9cc8-0c147cc3a979</recordtableid>
     </None>
+    <None Include="CompletionSteps.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>e358ecd7-fff5-4683-acd1-c237367c8687</id>
+      <recordtableid>ba8805fa-93f2-4f06-8f89-86950a98cf9d</recordtableid>
+    </None>
     <None Include="CreateVisitschedule.rxrec">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>5b9c3c72-3950-4d1c-9a7c-873a644cdc9b</id>
@@ -5290,6 +5377,21 @@
       <id>de77e08a-a1f1-46ac-8971-cdd7dbe62062</id>
       <recordtableid>9a2b9fff-5819-4334-8d9a-6b84b58d99f8</recordtableid>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+    </None>
+    <None Include="GetNextStateWoklowID.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>295b7723-2ea3-45f9-a76a-736a772800e6</id>
+      <recordtableid>860147ff-5413-4ab9-a595-bf35f0534b58</recordtableid>
+    </None>
+    <None Include="publishWorkflow.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>601dfacc-9379-4476-9b87-91f247360080</id>
+      <recordtableid>800196b0-6b42-4264-866e-bcea65bf2109</recordtableid>
+    </None>
+    <None Include="SetBatteryWorkflow.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>ae923f1d-ea09-404d-84db-f0e7e049c920</id>
+      <recordtableid>b4546a75-f491-464e-b1d9-93673cd91198</recordtableid>
     </None>
     <None Include="WorkflowCreation.rxrec">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
